--- a/access/templates/access/task_timeout.html
+++ b/access/templates/access/task_timeout.html
@@ -1,6 +1,11 @@
-<h1>Time out while grading</h1>
-<p>
-Ooops, the grading of your submission timed out!
-Sorry for your inconvenience.
-Please try again later or contact course support.
-</p>
+{% load i18n %}
+<div id="feedback">
+    <h1>{% trans "Time out while grading" %}</h1>
+    <p>
+        {% blocktrans %}
+        Ooops, the grading of your submission timed out!
+        Sorry for your inconvenience.
+        Please try again later or contact course support.
+        {% endblocktrans %}
+    </p>
+</div>
