--- a/access/templates/access/accept_files_default.html
+++ b/access/templates/access/accept_files_default.html
@@ -1,4 +1,5 @@
 {% extends 'access/exercise_frame.html' %}
+{% load i18n %}
 
 {% block exercise %}
 
@@ -7,7 +8,7 @@
   {{ exercise.instructions|safe }}
 </div>
 {% else %}
-<h1>Select your files for grading</h1>
+<h1>{% trans "Select your files for grading" %}</h1>
 {% endif %}
 
 {% include 'access/accept_files_form.html' %}
