--- a/access/templates/access/async_accepted.html
+++ b/access/templates/access/async_accepted.html
@@ -1,26 +1,33 @@
 {% extends 'access/exercise_frame.html' %}
+{% load i18n %}
 
 {% block exercise %}
 
-<h1>Submission accepted</h1>
+<h1>{% trans "Submission accepted" %}</h1>
 
 {% if result.missing_url %}
-<div class="alert alert-error">
-	<p>Missing the "submission_url" for result delivery! Grading and logging results.</p>
+<div class="alert alert-danger">
+	{% blocktrans with key="<code>submission_url</code>" %}
+	Missing the {{ key }} for result delivery! Grading and logging results.
+	{% endblocktrans %}
 </div>
 {% endif %}
 
 <div id="feedback">
 	<p>
 		{% if result.queue < 3 %}
+		{% blocktrans %}
 		Your submission is being graded. The result will be available on this page
 		when the grading process completes. Note that grading may take a while.
 		You might also need to update the page manually in order to see the results.
+		{% endblocktrans %}
 		{% else %}
-		Your submission is in the grading queue. There are {{ result.queue }} other
+		{% blocktrans with queue=result.queue %}
+		Your submission is in the grading queue. There are {{ queue }} other
 		submissions before. The result will be available on this page
 		when the grading process completes. The page must be updated manually to
 		see the results.
+		{% endblocktrans %}
 		{% endif %}
 	</p>
 </div>
