--- a/access/templates/access/course.html
+++ b/access/templates/access/course.html
@@ -1,12 +1,18 @@
 {% extends 'grader_frame.html' %}
+{% load i18n %}
+
+{% block title %}mooc-grader :: {{ course.name }}{% endblock %}
 
 {% block body %}
+<div class="page-header">
 	<h1>{{ course.name }}</h1>
-	<p>
-		<ul>
-			{% for exercise in exercises %}
-			<li><a href="{% url 'access.views.exercise' course.key exercise.key %}">{{ exercise.title }}</a></li>
-			{% endfor %}
-		</ul>
-	</p>
+</div>
+<h3>{% trans "Available courses" %}</h3>
+<div class="list-group">
+	{% for exercise in exercises %}
+	<a href="{% url 'access.views.exercise' course.key exercise.key %}" class="list-group-item">
+		{{ exercise.title }}
+	</a>
+	{% endfor %}
+</div>
 {% endblock %}
