--- a/access/templates/access/create_form_default.html
+++ b/access/templates/access/create_form_default.html
@@ -1,13 +1,23 @@
 {% extends 'access/exercise_frame.html' %}
+{% load i18n %}
 
 {% block exercise %}
 
 {% if result.accepted %}
-<div class="alert {% if result.error_fields %}alert-error{% else %}alert-success{% endif %}">
-<p>You got {{ result.points }}/{{ exercise.max_points }} points from this questionnaire.</p>
-<p>Note that the whole section of questions is marked as being incorrect if one of the questions
- in that section is incorrect. You can change your answers and grade them again from the bottom
- of the page. Notice the number of allowed submissions left!</p>
+<div class="alert {% if result.error_fields %}alert-danger{% else %}alert-success{% endif %}">
+<p>
+    {% blocktrans with points=result.points max_points=exercise.max_points %}
+    You got {{ points }}/{{ max_points }} points from this questionnaire.
+    {% endblocktrans %}
+</p>
+<p>
+    {% blocktrans %}
+    Note that the whole section of questions is marked as being incorrect if
+    one of the questions in that section is incorrect. You can change your
+    answers and grade them again from the bottom of the page. Notice the number
+    of allowed submissions left!
+    {% endblocktrans %}
+</p>
 </div>
 {% endif %}
 
