--- a/access/templates/access/pull_request.html
+++ b/access/templates/access/pull_request.html
@@ -1,32 +1,56 @@
 {% extends 'grader_frame.html' %}
+{% load i18n %}
+
+{% block title %}mooc-grader :: {% trans "Pull request" %}{% endblock %}
 
 {% block body %}
-	<h1>Exercise material pull requests</h1>
-	<form method="get">
-		<p>
-			Update course exercises that have been checked out to this grader server as a Git submodule.
-		</p>
-		<p>
-			You should PROBABLY NOT DO THIS unless you control the repository and know the HEAD state. 
-		</p>
-		<select name="key">
-			<option value="">- Select a course -</option>
+<div class="page-header">
+	<h1>{% trans "Exercise material pull requests" %}</h1>
+</div>
+<p>
+	{% blocktrans %}
+	Update course exercises that have been checked out to this grader server as a Git submodule.
+	{% endblocktrans %}
+</p>
+<div class="alert alert-warning">
+	{% blocktrans %}
+	You should NOT DO THIS unless you control the repository and know the HEAD state.
+	{% endblocktrans %}
+</div>
+<form method="get">
+	<div class="form-group">
+		<select name="key" class="form-control">
+			<option value="">- {% trans "Select a course" %} -</option>
 			{% for course in courses %}
 			<option value="{{ course.key }}">{{ course.name }}</option>
 			{% endfor %}
 		</select>
-		<input type="submit" value="Request Git pull at next full minute" />
-	</form>
-	
-	{% if status.updated %}
-	<h4>Status: Request added</h4>
-	{% elif status.not_found %}
-	<h4>Status: Unknown course!</h4>
-	{% endif %}
-	
-	<h4>Log:</h4>
-	<pre>
-{{ log }}
-	</pre>
+	</div>
+	<div class="form-group">
+		<input type="submit" value="{% trans 'Request Git pull at next full minute' %}" class="btn btn-warning" />
+	</div>
+</form>
 
+{% if status.updated %}
+<div class="alert alert-success">
+	{% blocktrans %}
+	Status: Request added<br />
+	This page URL may be used as a repository hook for automatic updates.
+	{% endblocktrans %}
+</div>
+{% elif status.not_found %}
+<div class="alert alert-danger">
+	{% trans "Status: Unknown course!" %}
+</div>
+{% endif %}
+
+<h4>
+	{% trans "Log" %}:
+	<a href="{% url 'access.views.pull_request' %}" class="btn btn-default btn-sm">
+		{% trans "Update log" %}
+	</a>
+</h4>
+<pre>
+{{ log }}
+</pre>
 {% endblock %}
