--- a/access/templates/access/task_success.html
+++ b/access/templates/access/task_success.html
@@ -1,16 +1,23 @@
-<h1>Total points {{ result.points }} / {{ result.max_points }}</h1>
-
-{% for entry in result.tests %}
+{% load i18n %}
+<div id="feedback">
+	<h1>
+		{% blocktrans with points=result.points max_points=result.max_points %}
+		Total points {{ points }}/{{ max_points }}
+		{% endblocktrans %}
+	</h1>
+	{% for entry in result.tests %}
 	{% if entry.title or entry.out or entry.err or entry.points > 0 %}
 	<div class="grading-task">
 		{% if entry.title %}
 		<h3>{{ entry.title }}</h3>
 		{% endif %}
-		
+
 		{% if entry.points > 0 and entry.max_points > 0 %}
-		Points {{ entry.points }} / {{ entry.max_points }}
+		{% blocktrans with points=entry.points max_points=entry.max_points %}
+		Points {{ points }}/{{ max_points }}
+		{% endblocktrans %}
 		{% endif %}
-		
+
 		{% if entry.out %}
 		{% if entry.html %}
 		{{ entry.out|safe }}
@@ -24,17 +31,18 @@
 		{% endif %}
 	</div>
 	{% endif %}
-{% endfor %}
+	{% endfor %}
 
-{% if result.has_appendixes %}
-<div id="appendixes" class="accordion">
-	<h2>Appendixes</h2>
-	<div>
-{% for entry in result.tests %}
-	{% if entry.appendix %}
-		{{ entry.appendix|safe }}
-	{% endif %}
-{% endfor %}
+	{% if result.has_appendixes %}
+	<div id="appendixes" class="accordion">
+		<h2>{% trans "Appendixes" %}</h2>
+		<div>
+			{% for entry in result.tests %}
+			{% if entry.appendix %}
+			{{ entry.appendix|safe }}
+			{% endif %}
+			{% endfor %}
+		</div>
 	</div>
+	{% endif %}
 </div>
-{% endif %}
