--- a/access/templates/access/task_system_error.html
+++ b/access/templates/access/task_system_error.html
@@ -1,6 +1,11 @@
-<h1>Internal server error</h1>
-<p>
-Ooops, there seems to be problems in the system!
-Sorry for your inconvenience.
-Please try again later or contact course support.
-</p>
+{% load i18n %}
+<div id="feedback">
+    <h1>{% trans "Internal server error" %}</h1>
+    <p>
+        {% blocktrans %}
+        Ooops, there seems to be problems in the system!
+        Sorry for your inconvenience.
+        Please try again later or contact course support.
+        {% endblocktrans %}
+    </p>
+</div>
