Implement brand name and site alert as settings.

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block title %}A+ 404 Not found{% endblock %}
+{% block title %}404 Not found{% endblock %}
 
 {% block content %}
 
