--- a/templates/500.html
+++ b/templates/500.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>A+ 500 Internal server error</title>
+        <title>500 Internal server error</title>
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     </head>
     <body>
@@ -13,7 +13,7 @@
             <div class="row">
                 <div class="col-md-8">
                     <div class="alert alert-danger">
-                        Something went terribly wrong and A+ was not able to process your request. Sorry.
+                        Something went terribly wrong and we were not able to process your request. Sorry.
                     </div>
                 </div>
             </div>
