--- a/edit_course/templates/edit_course/course_instance.html
+++ b/edit_course/templates/edit_course/course_instance.html
@@ -182,9 +182,9 @@
 	<dt>XXXXX1 and XXXXX2</dt>
     <dd>the real student ids</dd>
 	<dt>X1 (integer)</dt>
-    <dd>the A+ userprofile id of the desired grader</dd>
+    <dd>the system userprofile id of the desired grader</dd>
 	<dt>Z1 and Z2 (integers)</dt>
-    <dd>A+ exercise ids</dd>
+    <dd>the system exercise ids</dd>
 </dl>
 <pre>{
   "objects": [
