--- a/userprofile/templates/userprofile/login.html
+++ b/userprofile/templates/userprofile/login.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load bootstrap %}
 
-{% block title %}A+ {% trans "Login" %}{% endblock %}
+{% block title %}{{ block.super }} {% trans "Login" %}{% endblock %}
 
 {% block content %}
 
