--- a/edit_course/templates/edit_course/edit_course_base.html
+++ b/edit_course/templates/edit_course/edit_course_base.html
@@ -2,8 +2,8 @@
 {% load i18n %}
 {% load course %}
 
-{% block title %}{{ block.super}}: {% trans "Edit course" %}{% endblock %}
-{% block view_tag %}edit-course{% endblock %}
+{% block title %}{{ block.super}}: {% block edittitle %}{% trans "Edit course" %}{% endblock %}{% endblock %}
+{% block view_tag %}edit-course,edit-content{% endblock %}
 
 {% block breadcrumblist %}
 {{ block.super }}
@@ -14,6 +14,32 @@
 
 {% block columns %}
 <div class="col-md-12">
+
+    <ul class="nav nav-tabs">
+        <li role="presentation" class="menu-edit-content">
+        	<a href="{{ instance|url:'course-edit' }}">
+                {% trans "Content" %}
+            </a>
+        </li>
+        <li role="presentation" class="menu-deviations">
+            <a href="{{ instance|url:'deviations-list-dl' }}">
+                {% trans "Deviations" %}
+            </a>
+        </li>
+        <li role="presentation" class="menu-batch-assess">
+            <a href="{{ instance|url:'batch-assess-form' }}">
+                {% trans "Batch assess" %}
+            </a>
+        </li>
+        {% comment %}
+        <li role="presentation" class="menu-clone-instant">
+            <a href="{{ instance|url:'course-edit' }}">
+                {% trans "Clone" %}
+            </a>
+        </li>
+        {% endcomment %}
+    </ul>
+
     {% block coursecontent %}{% endblock %}
 </div>
 {% endblock %}
