--- a/exercise/templates/exercise/staff/_assess_info.html
+++ b/exercise/templates/exercise/staff/_assess_info.html
@@ -23,10 +23,10 @@
 
         <h4>{% trans "Submitted files" %}</h4>
 
-        <ul class="unstyled">
+        <ul class="list-unstyled">
             {% for file in submission.files.all %}
             <li>
-                <i class="icon-file"></i>
+                <span class="glyphicon glyphicon-file"></span>
                 {% include "exercise/_file_link.html" %}
             </li>
             {% empty %}
