Add course editing and cloning.
Fix #116
Fix #124

--- a/edit_course/templates/edit_course/batch_assess.html
+++ b/edit_course/templates/edit_course/batch_assess.html
@@ -55,10 +55,10 @@
 }
 </pre>
        {% endblocktrans %}
-        <form method="post" action="{{ instance|url:'batch-assess' }}">
+        <form method="post">
         	{% csrf_token %}
             <div class="form-group">
-                <textarea name="submissions_json"></textarea>
+                <textarea name="submissions_json" style="width:100%;height:10em;"></textarea>
             </div>
             <button type="submit" class="btn btn-primary">
                 {% trans "Submit" %}
