Add different coloring for full points.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -162,6 +162,9 @@ html, body {
 }
 
 /* point progress and badges */
+.progress {
+    position: relative;
+}
 .progress .required-points {
     position: absolute;
     height: 20px;
@@ -171,11 +174,16 @@ html, body {
     background-color: #f0ad4e;
     color: #fff;
 }
+.badge-info, .panel-primary>.panel-heading .badge-info {
+    background-color: #5bc0de;
+    color: #fff;
+}
 .badge-success, .panel-primary>.panel-heading .badge-success {
     background-color: #5cb85c;
     color: #fff;
 }
 .panel-primary>.panel-heading .badge-warning,
+.panel-primary>.panel-heading .badge-info,
 .panel-primary>.panel-heading .badge-success {
     border: 1px solid #fff;
     padding: 2px 6px;
