--- a/exercise/templates/exercise/_file_link.html
+++ b/exercise/templates/exercise/_file_link.html
@@ -1,2 +1,6 @@
-<a href="{{ file.get_absolute_url }}">{{ file.filename }}</a>
-({{ file.file_object.size|filesizeformat }})
+{% load i18n %}
+<a href="{{ file.get_absolute_url }}"{% if not file.is_passed %} class="file-modal"{% endif %}>{{ file.filename }}</a>
+<a href="{{ file.get_absolute_url }}?download=yes" class="btn btn-default btn-xs" title="{% trans Download %}">
+    <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>
+    {{ file.file_object.size|filesizeformat }}
+</a>
