Fix post action for all forms.

--- a/access/templates/access/accept_files_default.html
+++ b/access/templates/access/accept_files_default.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block exercise %}
-
+{% if not result.error %}
 {% if exercise.instructions %}
 <div class="instructions">
   {{ exercise.instructions|safe }}
@@ -12,5 +12,5 @@
 {% endif %}
 
 {% include 'access/accept_files_form.html' %}
-
+{% endif %}
 {% endblock %}
