--- a/access/templates/access/accept_files_form.html
+++ b/access/templates/access/accept_files_form.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 {% if exercise.files %}
-<form method="post" action="#" enctype="multipart/form-data">
+<form method="post" action="{{ post_url }}" enctype="multipart/form-data">
 	{% for entry in exercise.files %}
 	<div class="form-group">
 		<label for="{{ entry.field }}_id">
@@ -10,8 +10,10 @@
 		<input type="file" id="{{ entry.field }}_id" name="{{ entry.field }}" class="form-control" />
 	</div>
 	{% endfor %}
+	{% if post_url or not result.accepted %}
 	<div class="form-group">
 		<input type="submit" value="{% trans 'Submit' %}" class="btn btn-primary" />
 	</div>
+	{% endif %}
 </form>
 {% endif %}
