--- a/access/templates/access/accept_git_user.html
+++ b/access/templates/access/accept_git_user.html
@@ -2,14 +2,14 @@
 {% load i18n %}
 
 {% block exercise %}
-
+{% if not result.error %}
 {% if exercise.instructions %}
 <div class="instructions">
   {{ exercise.instructions|safe }}
 </div>
 {% endif %}
 
-<form method="post" action="#">
+<form method="post" action="{{ post_url }}">
 	{% if result.user and result.hash %}
 	<input type="hidden" name="user" value="{{ result.user }}" />
 	<input type="hidden" name="hash" value="{{ result.hash }}" />
@@ -26,9 +26,11 @@
         {% trans "Did you remember git add - git commit - git push?" %}
     </p>
 	{% endif %}
+    {% if post_url or not result.accepted %}
     <div class="form-group">
         <input type="submit" class="btn btn-primary" value="{% trans 'Request grading of my repository' %}" />
     </div>
+    {% endif %}
 </form>
-
+{% endif %}
 {% endblock %}
