--- a/access/templates/access/graded_form.html
+++ b/access/templates/access/graded_form.html
@@ -1,9 +1,5 @@
 {% load i18n %}
-<form method="post" action="{{ result.fix_url }}">
-	{% if result.fix_url %}
-	<input type="hidden" name="fix_url" value="{{ result.fix_url }}" />
-	{% endif %}
-
+<form method="post" action="{{ post_url }}">
 	{% for field in result.form %}
 	{% if field.field.open_set %}
 	<fieldset id="{{ field.field.open_set }}"{% if result.accepted %} class="alert {% if field.field.open_set in result.error_groups %}alert-danger{% else %}alert-success{% endif %}"{% endif %}>
@@ -39,7 +35,7 @@
 	{% endif %}
 	{% endfor %}
 
-	{% if result.fix_url or not result.accepted %}
+	{% if post_url or not result.accepted %}
 	<div class="form-group">
 		<input type="submit" value="{% trans 'Submit' %}" class="btn btn-primary" />
 	</div>
