--- a/course/templates/course/index.html
+++ b/course/templates/course/index.html
@@ -15,7 +15,11 @@
     <div class="col-sm-6 col-md-4">
         <div class="thumbnail course-thumbnail">
             <div class="image" aria-hidden="true">
+                {% if instance.image %}
+                <img src="{{ instance.image.url }}" alt="{{ instance.course.name }}" />
+                {% else %}
                 <h1 class="glyphicon glyphicon-book"></h1>
+                {% endif %}
             </div>
             <div class="caption">
                 <h3>
