--- a/course/templates/course/index.html
+++ b/course/templates/course/index.html
@@ -12,7 +12,7 @@
 <div class="row">
     {% for instance in instances %}
     {% with instance_url=instance|url %}
-    <div class="col-sm-6 col-md-4">
+    <div class="col-sm-6 col-md-4 col-lg-3">
         <div class="thumbnail course-thumbnail">
             <div class="image" aria-hidden="true">
                 {% if instance.image %}
