Fix fluid footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -166,7 +166,7 @@
 
             {% block footer %}
             <nav class="site-footer navbar navbar-default navbar-fixed-bottom">
-                <div class="container container-fluid">
+                <div class="container-fluid">
                     <ul class="nav navbar-nav">
                         {% block footercontent %}{% endblock %}
                         {% url 'privacy_policy' as policy_url %}
