--- a/exercise/templates/exercise/exercise_plain.html
+++ b/exercise/templates/exercise/exercise_plain.html
@@ -4,11 +4,22 @@
 {% load exercise %}
 <html>
 	<head>
+		<meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
 		<title>{{ exercise }}</title>
-		<script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
-		<script type="text/javascript" src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
-		<script type="text/javascript" src="{% static 'exercise/poll.js' %}"></script>
-		<link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}" />
+
+		<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" />
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.7/styles/github.min.css" rel="stylesheet" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.6/highlight.min.js"></script>
+
+		<link rel="stylesheet" href="{% static 'css/main.css' %}" />
+		<link rel="stylesheet" href="{% static 'css/submission.css' %}" />
+		<script src="{% static 'js/aplus.js' %}"></script>
 	</head>
 	<body>
 		<div id="exercise">
