Lose 3rd column at midsize

--- a/course/templates/course/course_base.html
+++ b/course/templates/course/course_base.html
@@ -34,11 +34,11 @@
         {% endblock %}
         <div class="row">
             {% block columns %}
-            <div class="col-md-9">
+            <div class="col-lg-9">
                 {% block coursecontent %}
                 {% endblock %}
             </div>
-            <div class="col-md-3">
+            <div class="col-lg-3">
                 {% block sidecontent %}
                 {% endblock %}
             </div>
